--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -15,7 +15,7 @@ block content
                         a.navigation-link(href='#three') Оплата и доставка
                     li.menu__item
                         a.navigation-link(href='#four') Контакты
-                .phone +3 8 066 841 18 92        
+                .phone +3 8 066 841 18 92       
             .main
                 h3.title__name Интернет-магазин купальников
                 h1.title__big 
@@ -47,104 +47,29 @@ block content
             .submain                
                 .section
                     .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
+                        img.section__pic(src='./img/wear1.png')
+                        p.section__price 520 грн.
+                        p.section__price_nonprice 460 грн.
                         button.button_price 
                             a.button__btn(href='#win1') Подробнее
                         a#win1.overlay(href='#x')    
-                        include popup
-   
+                        include popup   
                     .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
+                        img.section__pic(src='./img/wear3.png')
+                        p.section__price 520 грн.
+                        p.section__price_nonprice 460 грн.
                         button.button_price 
-                            a.button__btn(href='#win1') Подробнее
+                            a.button__btn(href='#win2') Подробнее
                         a#win2.overlay(href='#x')    
-                        include popup    
+                        include popup2    
                     .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
+                        img.section__pic(src='./img/wear4.png')
+                        p.section__price 520 грн.
+                        p.section__price_nonprice 460 грн.
                         button.button_price 
-                            a.button__btn(href='#win1') Подробнее
+                            a.button__btn(href='#win3') Подробнее
                         a#win3.overlay(href='#x')    
-                        include popup    
-                    .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
-                        button.button_price 
-                            a.button__btn(href='#win1') Подробнее
-                        a#win4.overlay(href='#x')    
-                        include popup    
-                .section        
-                    .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
-                        button.button_price 
-                            a.button__btn(href='#win1') Подробнее
-                        a#win5.overlay(href='#x')    
-                        include popup    
-                    .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
-                        button.button_price 
-                            a.button__btn(href='#win1') Подробнее
-                        a#win6.overlay(href='#x')    
-                        include popup    
-                    .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
-                        button.button_price 
-                            a.button__btn(href='#win1') Подробнее
-                        a#win7.overlay(href='#x')    
-                        include popup    
-                    .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
-                        button.button_price 
-                            a.button__btn(href='#win1') Подробнее
-                        a#win8.overlay(href='#x')    
-                        include popup    
-                .section
-                    .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
-                        button.button_price 
-                            a.button__btn(href='#win1') Подробнее
-                        a#win9.overlay(href='#x')    
-                        include popup    
-                    .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
-                        button.button_price 
-                            a.button__btn(href='#win1') Подробнее
-                        a#win10.overlay(href='#x')    
-                        include popup    
-                    .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
-                        button.button_price 
-                            a.button__btn(href='#win1') Подробнее
-                        a#win11.overlay(href='#x')    
-                        include popup    
-                    .section__shop
-                        img.section__pic(src='http://placekitten.com/g/250/250')
-                        p.section__price 330 грн.
-                        p.section__price_nonprice 660 грн.
-                        button.button_price 
-                            a.button__btn(href='#win1') Подробнее 
-                        a#win12.overlay(href='#x')    
-                        include popup    
+                        include popup3                        
                       
             .second-section#two
                 .backgrounds                    
@@ -168,16 +93,16 @@ block content
                     p.paragraph Доставка осуществляется УкрПочтой бесплатно. После оплаты товара мы отправляем Ваш заказ ценной бандеролью 1-го класса.
                     p.paragraph Наш магазин всегда идет на встречу клиентам и решает все возникшие вопросы. Будьте уверены, что Вы не останетесь наедине со своей проблемой, мы обязательно ее решим за Вас.
                     h2.title__third Об интернет-магазине
-                    p.paragraph Мы рады приветствовать Вас в нашем интернет-магазине!
-                    p.paragraph Каждая женщина может почувствовать себя уникальной, может дополнить свой образ изысканными украшениями и создать свой индивидуальный и неповторимый стиль. Все изделия изготавливаются вручную, каждое изделие становится шедевром. Используемые материалы - серебро 925 пробы, муранское стекло, эмаль, кожа, драгоценные и искусственные камни.
-                    p.paragraph Любой браслет может быть прекрасным подарком, большой ассортимент дает возможность сделать отличный выбор на любой вкус и по самым низким ценам.                                       
+                    p.paragraph Мы рады приветствовать Вас в нашем интернет-магазине! Наша компания специализируется на продаже купальников и пляжной одежды известных брендов от лучших европейских производителей.
+                    p.paragraph Каждая женщина хочет почувствовать себя уникальной, создать свой индивидуальный и неповторимый стиль. Мы предлагаем вам смелые и яркие купальники моделей 2017 года, которые подчеркнут естественную красоту и сделают незабываемые мгновения под летним солнцем еще приятнее!
+                    p.paragraph Отличный выбор на любой вкус и по самым низким ценам.                                       
             .footer#four
                 .footer-foot
                     h2.title-footer Купальники
                     p.foot Сайт разработан командой TookieTookie
                     ul.contacts
-                        li.contacts-item vintorp.ua@gmail.com +3 8 066 841 18 92 
-                        li.contacts-item Пн-Пт с 9:00 -19:00, Сб с 10:00 - 18:00                        
+                        li.contacts-item itemskiev@gmail.com +3 8 066 841 18 92
+                        li.contacts-item Пн-Пт с 9:00 - 19:00, Сб с 10:00 - 18:00                        
                         li.contacts-item Вс выходной
                         li.contacts-item Киев, ул. Мечникова, 2 БЦ "Парус"
             
