--- a/app/pug/popup2.pug
+++ b/app/pug/popup2.pug
@@ -1,11 +1,11 @@
 
 .popup 
   .popup__wear
-    h3.title__name.title__name_dark Купальник San-Marino
+    h3.title__name.title__name_dark Купальник Sunset
     p.section__description Размеры: S, M, L 
     p.section__description Материал: Nylon, Spandex
-        
-    img(src='./img/wear1-1.png')
+    
+    img(src='./img/wear3-3.png')
 
   //.fotorama(data-width="100%"     
      data-minwidth="320"
