--- a/app/css/style.css
+++ b/app/css/style.css
@@ -77,6 +77,13 @@ ul {
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between; }
+  @media (max-width: 992px) {
+    .header {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
 
 .title {
   -webkit-box-flex: 1;
@@ -101,9 +108,20 @@ ul {
       -ms-flex: 1;
           flex: 1;
   color: #01234c; }
+  @media (max-width: 992px) {
+    .phone {
+      display: none; } }
 
 .menu__item {
-  padding: 15px; }
+  margin: 15px; }
+  @media (max-width: 480px) {
+    .menu__item {
+      margin: 0;
+      padding: 10px;
+      font-size: 14px; } }
+  @media (max-width: 320px) {
+    .menu__item {
+      padding-left: 5px; } }
 
 .navigation-link {
   text-decoration: none;
@@ -137,6 +155,9 @@ ul {
   background: url(../img/girl.jpg);
   background-repeat: no-repeat;
   background-size: cover; }
+  @media (max-width: 768px) {
+    .main {
+      min-height: 600px; } }
 
 .title__name {
   color: #fff;
@@ -188,6 +209,9 @@ ul {
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0 auto; }
+  @media (max-width: 768px) {
+    .content-shop {
+      width: 100%; } }
 
 .content-shop__item {
   min-width: 15%;
@@ -201,6 +225,11 @@ ul {
       -ms-flex-direction: row;
           flex-direction: row;
   margin-right: 30px; }
+  @media (max-width: 768px) {
+    .content-shop__item {
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; } }
 
 .content__text {
   color: #fff;
@@ -213,6 +242,12 @@ ul {
   width: 40px;
   height: 40px;
   vertical-align: middle; }
+
+@media (max-width: 768px) {
+  .icon-star {
+    margin-left: 15%; }
+    .icon-star_iconed {
+      margin-left: 35%; } }
 
 .title__subname {
   color: #014b60; }
@@ -243,6 +278,9 @@ ul {
 .section__shop {
   display: inline-block;
   margin: 5px 20px; }
+  @media (max-width: 320px) {
+    .section__shop {
+      margin: 0; } }
 
 .section__price {
   text-align: center;
@@ -251,6 +289,14 @@ ul {
     text-align: center;
     text-decoration: line-through;
     color: #01234c; }
+
+@media (max-width: 768px) {
+  .section__pic {
+    width: 400px; } }
+
+@media (max-width: 480px) {
+  .section__pic {
+    width: auto; } }
 
 .button_price {
   margin: 0 auto;
@@ -290,7 +336,7 @@ ul {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-height: 500px;
+  min-height: 400px;
   margin-bottom: 80px; }
 
 .second-section__text {
@@ -305,12 +351,18 @@ ul {
   position: absolute;
   left: 10%;
   top: 20%; }
+  @media (max-width: 768px) {
+    .text__section {
+      font-size: 25px; } }
 
 .img__section {
   position: absolute;
   right: 0;
   bottom: 0;
   padding-right: 250px; }
+  @media (max-width: 992px) {
+    .img__section {
+      padding-right: 0; } }
 
 .third-section {
   margin-bottom: 100px;
@@ -350,6 +402,16 @@ ul {
           justify-content: space-between;
   width: 70%;
   margin: 0 auto; }
+  @media (max-width: 992px) {
+    .footer-foot {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
+  @media (max-width: 480px) {
+    .footer-foot {
+      width: 90%; } }
 
 .foot {
   -webkit-box-flex: 1;
@@ -360,6 +422,10 @@ ul {
   margin-top: 30px;
   color: #a6d0ef;
   font-weight: 400; }
+  @media (max-width: 992px) {
+    .foot {
+      margin-top: 5px;
+      margin-bottom: 5px; } }
 
 .title-footer {
   -webkit-box-flex: 1;
@@ -372,6 +438,10 @@ ul {
   -webkit-transition: color 0.25s cubic-bezier(0.64, 0.57, 0.67, 1.53);
   transition: color 0.25s cubic-bezier(0.64, 0.57, 0.67, 1.53);
   cursor: pointer; }
+  @media (max-width: 992px) {
+    .title-footer {
+      margin-top: 5px;
+      margin-bottom: 5px; } }
   .title-footer:hover {
     color: #01234c; }
 
@@ -383,42 +453,49 @@ ul {
   text-align: right;
   margin-right: 50px;
   color: #a6d0ef; }
+  @media (max-width: 992px) {
+    .contacts {
+      text-align: center;
+      margin-right: 0;
+      border-top: 1px solid #a6d0ef; } }
 
-.backgrounds .background {
-  position: relative;
-  height: 20px;
-  left: 0px;
-  right: 0px;
-  top: 120px;
-  -webkit-animation: bg 2s ease-in-out infinite;
-          animation: bg 2s ease-in-out infinite; }
-  .backgrounds .background .head {
-    position: absolute;
-    bottom: 100%;
+.backgrounds {
+  margin-top: -100px; }
+  .backgrounds .background {
+    position: relative;
+    height: 20px;
     left: 0px;
     right: 0px;
-    height: 20px; }
-  .backgrounds .background.layer-3 {
-    background-color: #a9e8db;
-    top: 135px; }
-    .backgrounds .background.layer-3 .head {
-      background: url(../img/grapefruitwave_3.svg);
-      background-position: -60px 0px; }
-  .backgrounds .background.layer-2 {
-    background-color: #01bfc4;
-    top: 128px;
-    -webkit-animation-delay: -0.5s;
-            animation-delay: -0.5s; }
-    .backgrounds .background.layer-2 .head {
-      background: url(../img/grapefruitwave_2.svg);
-      background-position: -40px 0px; }
-  .backgrounds .background.layer-1 {
-    height: 350px;
-    background-color: #0184a9;
-    -webkit-animation-delay: -1s;
-            animation-delay: -1s; }
-    .backgrounds .background.layer-1 .head {
-      background: url(../img/grapefruitwave_1.svg); }
+    top: 120px;
+    -webkit-animation: bg 2s ease-in-out infinite;
+            animation: bg 2s ease-in-out infinite; }
+    .backgrounds .background .head {
+      position: absolute;
+      bottom: 100%;
+      left: 0px;
+      right: 0px;
+      height: 20px; }
+    .backgrounds .background.layer-3 {
+      background-color: #a9e8db;
+      top: 135px; }
+      .backgrounds .background.layer-3 .head {
+        background: url(../img/grapefruitwave_3.svg);
+        background-position: -60px 0px; }
+    .backgrounds .background.layer-2 {
+      background-color: #01bfc4;
+      top: 128px;
+      -webkit-animation-delay: -0.5s;
+              animation-delay: -0.5s; }
+      .backgrounds .background.layer-2 .head {
+        background: url(../img/grapefruitwave_2.svg);
+        background-position: -40px 0px; }
+    .backgrounds .background.layer-1 {
+      height: 350px;
+      background-color: #0184a9;
+      -webkit-animation-delay: -1s;
+              animation-delay: -1s; }
+      .backgrounds .background.layer-1 .head {
+        background: url(../img/grapefruitwave_1.svg); }
 
 section.content {
   position: absolute;
@@ -463,74 +540,6 @@ section.content {
   50% {
     -webkit-transform: translateY(0px) rotate(6deg);
             transform: translateY(0px) rotate(6deg); } }
-
-@media only screen and (max-width: 959px) {
-  .header {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column; }
-  .phone {
-    display: none; } }
-
-@media only screen and (max-width: 992px) {
-  .footer-foot {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column; }
-  .title-footer {
-    margin-top: 5px;
-    margin-bottom: 5px; }
-  .foot {
-    margin-top: 5px;
-    margin-bottom: 5px; }
-  .contacts {
-    text-align: center;
-    margin-right: 0;
-    border-top: 1px solid #a6d0ef; }
-  .img__section {
-    padding-right: 0; }
-  .popup {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column; } }
-
-@media only screen and (max-width: 620px) {
-  .content-shop {
-    width: 100%; }
-  .content-shop__item {
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap; }
-  .icon-star {
-    margin-left: 15%; }
-    .icon-star_iconed {
-      margin-left: 35%; }
-  .main {
-    min-height: 600px; }
-  .section__pic {
-    width: 400px; }
-  .text__section {
-    font-size: 25px; }
-  .form-inputs {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap; } }
-
-@media only screen and (max-width: 360px) {
-  .menu__item {
-    margin: auto;
-    padding: 0; } }
 
 /*** Стили относящиеся к модальному окну и содержанию ***/
 .popup h1,
@@ -662,7 +671,12 @@ section.content {
 /* планшет */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
   .popup {
-    width: 95%; } }
+    width: 95%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; } }
 
 /* смарт */
 @media only screen and (min-width: 320px) and (max-width: 767px) {
@@ -740,7 +754,6 @@ section.content {
       -ms-flex: 1;
           flex: 1; }
   .form-group label {
-    margin-right: 15px;
     margin-bottom: 5px;
     color: #014b60;
     font-weight: 600; }
@@ -757,6 +770,16 @@ section.content {
   -webkit-flex-direction: row;
       -ms-flex-direction: row;
           flex-direction: row; }
+  @media (max-width: 768px) {
+    .form-inputs {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; } }
 
 .delivery {
   text-align: left;
@@ -770,6 +793,9 @@ section.content {
   text-align: left;
   padding: 0;
   margin: 0; }
+  @media (max-width: 320px) {
+    .deliv {
+      display: none; } }
 
 .group__form {
   padding: 5px;
@@ -797,6 +823,11 @@ section.content {
   .btn-lg:hover {
     color: #014b60;
     background: #a6d0ef; }
+
+.section__description {
+  text-align: left;
+  font-weight: bold;
+  color: #014b60; }
 
 #slider {
   margin: 0 auto;
