--- a/app/sass/popup.scss
+++ b/app/sass/popup.scss
@@ -1,3 +1,4 @@
+@import "_mixin";
 /*** Стили относящиеся к модальному окну и содержанию ***/
 .popup h1,
 .popup h2,
@@ -64,6 +65,8 @@ box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
 transform: translate(-50%, -150%);
 /* анимируем трансформацию */
 transition: transform 0.6s ease-out;
+
+
 }
 /* активируем мод. окно */
 .overlay:target+.popup {
@@ -107,6 +110,7 @@ padding: 5px;
 @media only screen and (min-width: 768px) and (max-width: 959px) {
 	.popup {
 		width: 95%;
+        flex-direction: column;
 	}
 }
 /* смарт */
@@ -175,10 +179,6 @@ padding: 5px;
     }
 }
 
-.form{
-    
-}
-
 .form-group{
     text-align: center; 
      
@@ -186,7 +186,7 @@ padding: 5px;
     flex: 1;
 
     label{
-        margin-right: 15px;
+        
         margin-bottom: 5px;
         color: #014b60;
         font-weight: 600;
@@ -201,6 +201,11 @@ padding: 5px;
 .form-inputs{
     display: flex;
     flex-direction: row;
+
+    @include tablets{
+     flex-direction: column;
+     flex-wrap: wrap;
+    }
 }
 
 .delivery{
@@ -217,7 +222,11 @@ padding: 5px;
 .deliv{
     text-align: left;
     padding: 0;
-    margin: 0
+    margin: 0;
+
+    @include iphone{
+     display: none;
+    }
 }
 
 .group__form{
@@ -249,4 +258,10 @@ padding: 5px;
         color: #014b60;
         background: #a6d0ef;
     }
+}
+
+.section__description{
+    text-align: left;
+    font-weight: bold;
+    color: #014b60;
 }
