--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -23,9 +23,9 @@ block content
                     br
                     | для незабываемого отдыха
                 h2.title__small Купальники по самым лучшим ценам!
-                button.button 
+                //button.button 
                     img.button__pic(src='./img/favicon.ico')
-                    | Купить в один клик!
+                    a.navigation-link(href='#form')| Купить в один клик!
                 .content-shop
                      .content-shop__item
                         .icon-star
