--- a/app/css/popup.css
+++ b/app/css/popup.css
@@ -11,15 +11,24 @@
 .popup h1 {
   /* заголовок 1 */
   font-size: 24px; }
+  @media (max-width: 480px) {
+    .popup h1 {
+      font-size: 18px; } }
 
 .popup h2 {
   /* заголовок 2 */
   font-size: 1.5em; }
+  @media (max-width: 480px) {
+    .popup h2 {
+      font-size: 18px; } }
 
 .popup h3 {
   /* заголовок 3 */
   font-size: 25px;
   text-align: center; }
+  @media (max-width: 480px) {
+    .popup h3 {
+      font-size: 18px; } }
 
 /* Базовые стили слоя затемнения и модального окна  */
 .overlay {
@@ -63,7 +72,7 @@
   margin: 0 auto;
   width: 100%;
   min-width: 320px;
-  max-width: 820px;
+  max-width: 920px;
   /* фиксированное позиционирование, окно стабильно при прокрутке */
   position: fixed;
   padding: 15px;
@@ -98,8 +107,8 @@
   padding: 0;
   top: -10px;
   right: -10px;
-  width: 22px;
-  height: 22px;
+  width: 26px;
+  height: 26px;
   border: 2px solid #ccc;
   -webkit-border-radius: 50%;
           border-radius: 50%;
@@ -125,6 +134,12 @@
 .popup p {
   margin: 0;
   padding: 5px; }
+  @media (max-width: 768px) {
+    .popup p {
+      margin-left: 10px; } }
+  @media (max-width: 480px) {
+    .popup p {
+      padding: 0; } }
 
 /* планшет */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
@@ -139,7 +154,7 @@
 /* смарт */
 @media only screen and (min-width: 320px) and (max-width: 767px) {
   .popup {
-    width: 85%; } }
+    width: 95%; } }
 
 /* изображения внутри окна */
 /* миниатюры слева/справа */
@@ -175,7 +190,49 @@
   -webkit-box-flex: 1;
   -webkit-flex: 1;
       -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row; }
+  @media (max-width: 480px) {
+    .popup__wear {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
+
+.deliv__pic {
+  width: 300px;
+  margin-left: -70px; }
+  @media (max-width: 768px) {
+    .deliv__pic {
+      width: 100%;
+      margin-left: 0; } }
+  @media (max-width: 480px) {
+    .deliv__pic {
+      width: 60%; } }
+
+.popup__first {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
           flex: 1; }
+
+.form {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+  @media (max-width: 480px) {
+    .form {
+      margin-top: -85px; } }
 
 .section__par {
   font-size: 20px;
@@ -217,6 +274,9 @@
     font-weight: 600; }
   .form-group input {
     color: #014b60; }
+    @media (max-width: 480px) {
+      .form-group input {
+        width: 100%; } }
 
 .form-inputs {
   display: -webkit-box;
@@ -227,7 +287,8 @@
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
       -ms-flex-direction: row;
-          flex-direction: row; }
+          flex-direction: row;
+  margin-top: 70px; }
   @media (max-width: 768px) {
     .form-inputs {
       -webkit-box-orient: vertical;
@@ -240,9 +301,29 @@
               flex-wrap: wrap; } }
 
 .delivery {
-  text-align: left;
-  margin-left: 20%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   margin-top: 10px; }
+  @media (max-width: 768px) {
+    .delivery {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; } }
+  @media (max-width: 480px) {
+    .delivery {
+      margin-left: 10px; } }
   .delivery label {
     color: #014b60;
     font-weight: 600; }
@@ -251,7 +332,10 @@
   text-align: left;
   padding: 0;
   margin: 0; }
-  @media (max-width: 320px) {
+  @media (max-width: 768px) {
+    .deliv {
+      font-size: 14px; } }
+  @media (max-width: 380px) {
     .deliv {
       display: none; } }
 
@@ -278,6 +362,9 @@
   color: #a6d0ef;
   cursor: pointer;
   border: none; }
+  @media (max-width: 480px) {
+    .btn-lg {
+      margin-top: 5px; } }
   .btn-lg:hover {
     color: #014b60;
     background: #a6d0ef; }
@@ -286,3 +373,7 @@
   text-align: left;
   font-weight: bold;
   color: #014b60; }
+  @media (max-width: 480px) {
+    .section__description {
+      font-size: 14px;
+      text-align: center; } }
