--- a/app/css/style.css
+++ b/app/css/style.css
@@ -119,7 +119,7 @@ ul {
       margin: 0;
       padding: 10px;
       font-size: 14px; } }
-  @media (max-width: 320px) {
+  @media (max-width: 380px) {
     .menu__item {
       padding-left: 5px; } }
 
@@ -176,9 +176,12 @@ ul {
 
 .title__small {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 120px;
   color: #fff;
   text-transform: uppercase; }
+  @media (max-width: 480px) {
+    .title__small {
+      margin-bottom: 50px; } }
 
 .button {
   width: auto;
@@ -278,7 +281,7 @@ ul {
 .section__shop {
   display: inline-block;
   margin: 5px 20px; }
-  @media (max-width: 320px) {
+  @media (max-width: 380px) {
     .section__shop {
       margin: 0; } }
 
@@ -308,6 +311,9 @@ ul {
   border: none;
   color: #a6d0ef;
   background: #014b60; }
+  @media (max-width: 480px) {
+    .button_price {
+      margin-bottom: 20px; } }
   .button_price:hover {
     background: #a6d0ef; }
 
@@ -354,6 +360,9 @@ ul {
   @media (max-width: 768px) {
     .text__section {
       font-size: 25px; } }
+  @media (max-width: 480px) {
+    .text__section {
+      font-size: 20px; } }
 
 .img__section {
   position: absolute;
@@ -553,15 +562,24 @@ section.content {
 .popup h1 {
   /* заголовок 1 */
   font-size: 24px; }
+  @media (max-width: 480px) {
+    .popup h1 {
+      font-size: 18px; } }
 
 .popup h2 {
   /* заголовок 2 */
   font-size: 1.5em; }
+  @media (max-width: 480px) {
+    .popup h2 {
+      font-size: 18px; } }
 
 .popup h3 {
   /* заголовок 3 */
   font-size: 25px;
   text-align: center; }
+  @media (max-width: 480px) {
+    .popup h3 {
+      font-size: 18px; } }
 
 /* Базовые стили слоя затемнения и модального окна  */
 .overlay {
@@ -605,7 +623,7 @@ section.content {
   margin: 0 auto;
   width: 100%;
   min-width: 320px;
-  max-width: 820px;
+  max-width: 920px;
   /* фиксированное позиционирование, окно стабильно при прокрутке */
   position: fixed;
   padding: 15px;
@@ -640,8 +658,8 @@ section.content {
   padding: 0;
   top: -10px;
   right: -10px;
-  width: 22px;
-  height: 22px;
+  width: 26px;
+  height: 26px;
   border: 2px solid #ccc;
   -webkit-border-radius: 50%;
           border-radius: 50%;
@@ -667,6 +685,12 @@ section.content {
 .popup p {
   margin: 0;
   padding: 5px; }
+  @media (max-width: 768px) {
+    .popup p {
+      margin-left: 10px; } }
+  @media (max-width: 480px) {
+    .popup p {
+      padding: 0; } }
 
 /* планшет */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
@@ -681,7 +705,7 @@ section.content {
 /* смарт */
 @media only screen and (min-width: 320px) and (max-width: 767px) {
   .popup {
-    width: 85%; } }
+    width: 95%; } }
 
 /* изображения внутри окна */
 /* миниатюры слева/справа */
@@ -717,7 +741,49 @@ section.content {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
       -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row; }
+  @media (max-width: 480px) {
+    .popup__wear {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
+
+.deliv__pic {
+  width: 300px;
+  margin-left: -70px; }
+  @media (max-width: 768px) {
+    .deliv__pic {
+      width: 100%;
+      margin-left: 0; } }
+  @media (max-width: 480px) {
+    .deliv__pic {
+      width: 60%; } }
+
+.popup__first {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
           flex: 1; }
+
+.form {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+  @media (max-width: 480px) {
+    .form {
+      margin-top: -85px; } }
 
 .section__par {
   font-size: 20px;
@@ -759,6 +825,9 @@ section.content {
     font-weight: 600; }
   .form-group input {
     color: #014b60; }
+    @media (max-width: 480px) {
+      .form-group input {
+        width: 100%; } }
 
 .form-inputs {
   display: -webkit-box;
@@ -769,7 +838,8 @@ section.content {
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
       -ms-flex-direction: row;
-          flex-direction: row; }
+          flex-direction: row;
+  margin-top: 70px; }
   @media (max-width: 768px) {
     .form-inputs {
       -webkit-box-orient: vertical;
@@ -782,9 +852,29 @@ section.content {
               flex-wrap: wrap; } }
 
 .delivery {
-  text-align: left;
-  margin-left: 20%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   margin-top: 10px; }
+  @media (max-width: 768px) {
+    .delivery {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; } }
+  @media (max-width: 480px) {
+    .delivery {
+      margin-left: 10px; } }
   .delivery label {
     color: #014b60;
     font-weight: 600; }
@@ -793,7 +883,10 @@ section.content {
   text-align: left;
   padding: 0;
   margin: 0; }
-  @media (max-width: 320px) {
+  @media (max-width: 768px) {
+    .deliv {
+      font-size: 14px; } }
+  @media (max-width: 380px) {
     .deliv {
       display: none; } }
 
@@ -820,6 +913,9 @@ section.content {
   color: #a6d0ef;
   cursor: pointer;
   border: none; }
+  @media (max-width: 480px) {
+    .btn-lg {
+      margin-top: 5px; } }
   .btn-lg:hover {
     color: #014b60;
     background: #a6d0ef; }
@@ -828,6 +924,10 @@ section.content {
   text-align: left;
   font-weight: bold;
   color: #014b60; }
+  @media (max-width: 480px) {
+    .section__description {
+      font-size: 14px;
+      text-align: center; } }
 
 #slider {
   margin: 0 auto;
