--- a/app/pug/popup2.pug
+++ b/app/pug/popup2.pug
@@ -1,43 +1,44 @@
 
 .popup 
   .popup__wear
-    h3.title__name.title__name_dark Купальник Sunset
-    p.section__description Размеры: S, M, L 
-    p.section__description Материал: Nylon, Spandex
-    
-    img(src='./img/wear3-3.png')
+    .popup__first
+      h3.title__name.title__name_dark Купальник SunSet
+      p.section__description Размеры: S, M, L 
+      p.section__description Материал: Nylon, Spandex
+      
+      img.deliv__pic(src='./img/wear3-3.png')  
 
-  //.fotorama(data-width="100%"     
-     data-minwidth="320"
-     data-maxwidth="820"
-     data-maxheight='300'     
-     data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
-    img(src='./img/girl.jpg')
-    img(src='./img/wear.jpg')
-    img(src='./img/girl.jpg')
-    img(src='./img/wear.jpg')
-    img(src='./img/girl.jpg')
-    img(src='./img/wear.jpg')
-    img(src='./img/girl.jpg')
-    img(src='./img/wear.jpg')
-    img(src='./img/girl.jpg')  
-  form.form
-    .form-inputs
-      .form-group
-        label(for='lead_city') В каком Вы городе?
-        input.group__form#lead_city.form-control(type='name', placeholder='к примеру, Киев')
-      .form-group 
-        label(for='lead_phone') Номер телефона
-        input.group__input#lead_phone.form-control(type='phone', placeholder='+38 123 456 7890')
-    .delivery  
-      label(for='lead_delivery') Как желаете получить?
-        select.group__select#lead_delivery.form-control
-          option Доставка Новой Почтой
-          option Приеду в шоурум (г.Киев)
-          option Пока не знаю. Жду звонка
-    p.deliv
-      | Сразу после отправки заявки Вы окажетесь на странице определения размера.
-      | Мы это сделали, чтобы вам было проще определиться точно с нужным размером, пока мы звоним вам.
-      | Если вы не уверены в размере - мы поможем по телефону.
-    button.btn-lg.btn-success(type='submit') Отправить заявку                                   
-    a.close(title='Закрыть', href='#close')  
+    //.fotorama(data-width="100%"     
+      data-minwidth="320"
+      data-maxwidth="820"
+      data-maxheight='300'     
+      data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
+      img(src='./img/girl.jpg')
+      img(src='./img/wear.jpg')
+      img(src='./img/girl.jpg')
+      img(src='./img/wear.jpg')
+      img(src='./img/girl.jpg')
+      img(src='./img/wear.jpg')
+      img(src='./img/girl.jpg')
+      img(src='./img/wear.jpg')
+      img(src='./img/girl.jpg')  
+    form.form#form
+      .form-inputs
+        .form-group
+          label(for='lead_city') В каком Вы городе?
+          input.group__form#lead_city.form-control(type='name', placeholder='к примеру, Киев')
+        .form-group 
+          label(for='lead_phone') Номер телефона
+          input.group__input#lead_phone.form-control(type='phone', placeholder='+38 123 456 7890')
+      .delivery  
+        label(for='lead_delivery') Как желаете получить?
+          select.group__select#lead_delivery.form-control
+            option Доставка Новой Почтой
+            option Приеду в шоурум (г.Киев)
+            option Пока не знаю. Жду звонка
+      p.deliv
+        | Сразу после отправки заявки Вы окажетесь на странице определения размера.
+        | Мы это сделали, чтобы вам было проще определиться точно с нужным размером, пока мы звоним вам.
+        | Если вы не уверены в размере - мы поможем по телефону.
+      button.btn-lg.btn-success(type='submit') Отправить заявку                                   
+      a.close(title='Закрыть', href='#close')  
