--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -47,7 +47,7 @@ block content
             .submain                
                 .section
                     .section__shop
-                        img.section__pic(src='./img/wear1.png')
+                        img.section__pic(src='./img/wear1-1.png')
                         p.section__price 520 грн.
                         p.section__price_nonprice 460 грн.
                         button.button_price 
@@ -55,7 +55,7 @@ block content
                         a#win1.overlay(href='#x')    
                         include popup   
                     .section__shop
-                        img.section__pic(src='./img/wear3.png')
+                        img.section__pic(src='./img/wear2-1.png')
                         p.section__price 520 грн.
                         p.section__price_nonprice 460 грн.
                         button.button_price 
@@ -63,13 +63,29 @@ block content
                         a#win2.overlay(href='#x')    
                         include popup2    
                     .section__shop
-                        img.section__pic(src='./img/wear4.png')
+                        img.section__pic(src='./img/wear3-1.png')
                         p.section__price 520 грн.
                         p.section__price_nonprice 460 грн.
                         button.button_price 
                             a.button__btn(href='#win3') Подробнее
                         a#win3.overlay(href='#x')    
-                        include popup3                        
+                        include popup3
+                    .section__shop
+                        img.section__pic(src='./img/wear4-1.png')
+                        p.section__price 520 грн.
+                        p.section__price_nonprice 460 грн.
+                        button.button_price 
+                            a.button__btn(href='#win4') Подробнее
+                        a#win4.overlay(href='#x')    
+                        include popup4     
+                    .section__shop
+                        img.section__pic(src='./img/wear5-1.png')
+                        p.section__price 520 грн.
+                        p.section__price_nonprice 460 грн.
+                        button.button_price 
+                            a.button__btn(href='#win5') Подробнее
+                        a#win5.overlay(href='#x')    
+                        include popup5                                    
                       
             .second-section#two
                 .backgrounds                    
