--- a/app/css/style.css
+++ b/app/css/style.css
@@ -380,6 +380,9 @@ ul {
 .third-section__wrapper {
   width: 80%;
   margin: 0 auto; }
+  @media (max-width: 480px) {
+    .third-section__wrapper {
+      width: 100%; } }
 
 .title__third {
   text-align: center;
@@ -390,6 +393,9 @@ ul {
 
 .paragraph {
   margin-bottom: 10px; }
+  @media (max-width: 480px) {
+    .paragraph {
+      margin-left: 10px; } }
 
 .footer {
   width: 100%;
@@ -558,6 +564,11 @@ section.content {
   font-size: 35px;
   font-weight: bold;
   text-align: center; }
+  @media (max-width: 380px) {
+    .popup h1,
+    .popup h2,
+    .popup h3 {
+      font-weight: 400; } }
 
 .popup h1 {
   /* заголовок 1 */
@@ -622,7 +633,7 @@ section.content {
   z-index: 10000;
   margin: 0 auto;
   width: 100%;
-  min-width: 320px;
+  min-width: 300px;
   max-width: 920px;
   /* фиксированное позиционирование, окно стабильно при прокрутке */
   position: fixed;
@@ -682,16 +693,6 @@ section.content {
 .close:hover {
   background-color: rgba(252, 20, 0, 0.8); }
 
-.popup p {
-  margin: 0;
-  padding: 5px; }
-  @media (max-width: 768px) {
-    .popup p {
-      margin-left: 10px; } }
-  @media (max-width: 480px) {
-    .popup p {
-      padding: 0; } }
-
 /* планшет */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
   .popup {
@@ -705,7 +706,8 @@ section.content {
 /* смарт */
 @media only screen and (min-width: 320px) and (max-width: 767px) {
   .popup {
-    width: 95%; } }
+    width: 90%;
+    height: 440px; } }
 
 /* изображения внутри окна */
 /* миниатюры слева/справа */
@@ -774,16 +776,37 @@ section.content {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
       -ms-flex: 1;
-          flex: 1; }
+          flex: 1;
+  margin-bottom: 30px; }
+  @media (max-width: 768px) {
+    .popup__first {
+      margin-bottom: 0; } }
+  @media (max-width: 480px) {
+    .popup__first {
+      width: 50%;
+      float: right;
+      margin-top: 15px; } }
 
 .form {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
       -ms-flex: 1;
-          flex: 1; }
+          flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
   @media (max-width: 480px) {
     .form {
-      margin-top: -85px; } }
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row; } }
 
 .section__par {
   font-size: 20px;
@@ -819,10 +842,17 @@ section.content {
   -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1; }
+  @media (max-width: 768px) {
+    .form-group {
+      width: 70%; } }
   .form-group label {
     margin-bottom: 5px;
     color: #014b60;
     font-weight: 600; }
+    @media (max-width: 380px) {
+      .form-group label {
+        font-size: 10px;
+        font-weight: 400; } }
   .form-group input {
     color: #014b60; }
     @media (max-width: 480px) {
@@ -838,8 +868,7 @@ section.content {
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
       -ms-flex-direction: row;
-          flex-direction: row;
-  margin-top: 70px; }
+          flex-direction: row; }
   @media (max-width: 768px) {
     .form-inputs {
       -webkit-box-orient: vertical;
@@ -847,9 +876,10 @@ section.content {
       -webkit-flex-direction: column;
           -ms-flex-direction: column;
               flex-direction: column;
-      -webkit-flex-wrap: wrap;
-          -ms-flex-wrap: wrap;
-              flex-wrap: wrap; } }
+      width: 50%; } }
+  @media (max-width: 380px) {
+    .form-inputs {
+      font-weight: normal; } }
 
 .delivery {
   display: -webkit-box;
@@ -874,10 +904,21 @@ section.content {
               flex-wrap: wrap; } }
   @media (max-width: 480px) {
     .delivery {
-      margin-left: 10px; } }
+      margin-top: -58px;
+      margin-left: 170px;
+      margin-bottom: 20px;
+      width: 50%; } }
+  @media (max-width: 380px) {
+    .delivery {
+      font-size: 12px;
+      margin-left: 120px;
+      margin-top: -38px; } }
   .delivery label {
     color: #014b60;
     font-weight: 600; }
+    @media (max-width: 380px) {
+      .delivery label {
+        font-weight: normal; } }
 
 .deliv {
   text-align: left;
@@ -886,7 +927,7 @@ section.content {
   @media (max-width: 768px) {
     .deliv {
       font-size: 14px; } }
-  @media (max-width: 380px) {
+  @media (max-width: 480px) {
     .deliv {
       display: none; } }
 
@@ -894,16 +935,28 @@ section.content {
   padding: 5px;
   -webkit-border-radius: 4px;
           border-radius: 4px; }
+  @media (max-width: 380px) {
+    .group__form {
+      padding: 2px;
+      font-size: 10px; } }
 
 .group__input {
   padding: 5px;
   -webkit-border-radius: 4px;
           border-radius: 4px; }
+  @media (max-width: 380px) {
+    .group__input {
+      padding: 2px;
+      font-size: 10px; } }
 
 .group__select {
   padding: 5px;
   -webkit-border-radius: 4px;
           border-radius: 4px; }
+  @media (max-width: 380px) {
+    .group__select {
+      padding: 2px;
+      font-size: 10px; } }
 
 .btn-lg {
   padding: 7px;
@@ -912,10 +965,16 @@ section.content {
   background: #014b60;
   color: #a6d0ef;
   cursor: pointer;
-  border: none; }
-  @media (max-width: 480px) {
+  border: none;
+  margin-right: 20px; }
+  @media (max-width: 768px) {
     .btn-lg {
-      margin-top: 5px; } }
+      margin-top: 10px; } }
+  @media (max-width: 380px) {
+    .btn-lg {
+      padding: 4px;
+      font-size: 12px;
+      margin-top: 2px; } }
   .btn-lg:hover {
     color: #014b60;
     background: #a6d0ef; }
@@ -923,11 +982,19 @@ section.content {
 .section__description {
   text-align: left;
   font-weight: bold;
-  color: #014b60; }
+  color: #01234c; }
   @media (max-width: 480px) {
     .section__description {
       font-size: 14px;
-      text-align: center; } }
+      text-align: left; } }
+  @media (max-width: 380px) {
+    .section__description {
+      font-size: 11px; } }
+
+@media (max-width: 380px) {
+  .fotorama {
+    margin-left: -20px;
+    min-height: 200px; } }
 
 #slider {
   margin: 0 auto;
