--- a/app/pug/popup2.pug
+++ b/app/pug/popup2.pug
@@ -1,28 +1,20 @@
 
 .popup 
-  .popup__wear
-    .popup__first
-      h3.title__name.title__name_dark Купальник SunSet
-      p.section__description Размеры: S, M, L 
-      p.section__description Материал: Nylon, Spandex
-      
-      img.deliv__pic(src='./img/wear3-3.png')  
-
-    //.fotorama(data-width="100%"     
+  h3.title__name.title__name_dark Купальник SunSet
+  .popup__wear         
+    .fotorama(data-width="100%"     
       data-minwidth="320"
       data-maxwidth="820"
       data-maxheight='300'     
       data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
-      img(src='./img/girl.jpg')
-      img(src='./img/wear.jpg')
-      img(src='./img/girl.jpg')
-      img(src='./img/wear.jpg')
-      img(src='./img/girl.jpg')
-      img(src='./img/wear.jpg')
-      img(src='./img/girl.jpg')
-      img(src='./img/wear.jpg')
-      img(src='./img/girl.jpg')  
+      img(src='./img/wear2-1.png')
+      img(src='./img/wear2-2.png')
+      img(src='./img/wear2-3.png')
+      
     form.form#form
+      .popup__first      
+        p.section__description Размеры: S, M, L 
+        p.section__description Материал: Nylon, Spandex
       .form-inputs
         .form-group
           label(for='lead_city') В каком Вы городе?
