--- a/app/pug/popup3.pug
+++ b/app/pug/popup3.pug
@@ -1,28 +1,23 @@
 
 .popup 
-  .popup__wear
-    .popup__first
-      h3.title__name.title__name_dark Купальник SunRise
-      p.section__description Размеры: S, M, L 
-      p.section__description Материал: Nylon, Spandex
-      
-      img.deliv__pic(src='./img/wear4-4.png')  
-
-    //.fotorama(data-width="100%"     
+  h3.title__name.title__name_dark Купальник SunRise
+  .popup__wear   
+     
+    .fotorama(data-width="100%"     
       data-minwidth="320"
       data-maxwidth="820"
       data-maxheight='300'     
       data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
-      img(src='./img/girl.jpg')
-      img(src='./img/wear.jpg')
-      img(src='./img/girl.jpg')
-      img(src='./img/wear.jpg')
-      img(src='./img/girl.jpg')
-      img(src='./img/wear.jpg')
-      img(src='./img/girl.jpg')
-      img(src='./img/wear.jpg')
-      img(src='./img/girl.jpg')  
+      img(src='./img/wear3-1.png')
+      img(src='./img/wear3-2.png')
+      img(src='./img/wear3-3.png')
+      img(src='./img/wear3-4.png')
+      img(src='./img/wear3-5.png')
+      img(src='./img/wear3-6.png')
     form.form#form
+      .popup__first      
+        p.section__description Размеры: S, M, L 
+        p.section__description Материал: Nylon, Spandex
       .form-inputs
         .form-group
           label(for='lead_city') В каком Вы городе?
