--- a/app/pug/popup4.pug
+++ b/app/pug/popup4.pug
@@ -1,21 +1,21 @@
 
 .popup 
-  h3.title__name.title__name_dark Купальник San-Marino
-  .popup__wear 
+  h3.title__name.title__name_dark Купальник SunSet
+  .popup__wear             
+
     .fotorama(data-width="100%"     
       data-minwidth="320"
       data-maxwidth="820"
-      data-maxheight='300'   
-      data-minheight='100'  
+      data-maxheight='300'     
       data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
-      img(src='./img/wear1-1.png')
-      img(src='./img/wear1-2.png')
-      img(src='./img/wear1-3.png')
-      
+      img(src='./img/wear4-1.png')
+      img(src='./img/wear4-2.png')
+      img(src='./img/wear4-3.png')
+      img(src='./img/wear4-4.png')
     form.form#form
       .popup__first      
         p.section__description Размеры: S, M, L 
-        p.section__description Материал: Nylon, Spandex  
+        p.section__description Материал: Nylon, Spandex 
       .form-inputs
         .form-group
           label(for='lead_city') В каком Вы городе?
@@ -33,6 +33,5 @@
         | Сразу после отправки заявки Вы окажетесь на странице определения размера.
         | Мы это сделали, чтобы вам было проще определиться точно с нужным размером, пока мы звоним вам.
         | Если вы не уверены в размере - мы поможем по телефону.
-      button.btn-lg.btn-success#send(type='submit') Отправить заявку     
-      button.btn-lg.btn-success#tel(type='submit') Заказать звонок                               
+      button.btn-lg.btn-success(type='submit') Отправить заявку                                   
       a.close(title='Закрыть', href='#close')  
