--- a/app/sass/popup.scss
+++ b/app/sass/popup.scss
@@ -7,7 +7,9 @@ color: #01234c;
 font-size: 35px;
 font-weight: bold;
 text-align: center;
-
+@include iphone{
+        font-weight: 400;
+    }
 }
 .popup h1 { /* заголовок 1 */
 font-size:24px;
@@ -15,6 +17,7 @@ font-size:24px;
 @include phones{
       font-size: 18px;
     }
+    
 }
 .popup h2 { /* заголовок 2 */
 font-size: 1.5em;
@@ -22,6 +25,7 @@ font-size: 1.5em;
 @include phones{
       font-size: 18px;
     }
+    
 }
 .popup h3 { /* заголовок 3 */
 font-size: 25px;
@@ -30,6 +34,7 @@ text-align: center;
 @include phones{
       font-size: 18px;
     }
+    
 }
 /* Базовые стили слоя затемнения и модального окна  */
 .overlay {
@@ -63,7 +68,7 @@ font-family: 'Tahoma', Arial, sans-serif;
 z-index: 10000;
 margin: 0 auto;
 width: 100%;
-min-width: 320px;
+min-width: 300px;
 max-width: 920px;
 /* фиксированное позиционирование, окно стабильно при прокрутке */
 position: fixed;
@@ -118,18 +123,7 @@ font-size: 12px;
 .close:hover {
 background-color: rgba(252, 20, 0, 0.8);
 }
-.popup p {
-margin: 0;
-padding: 5px;
 
-@include tablets{
-    margin-left: 10px;
-}
-
-@include phones{
-    padding: 0;
-}
-}
 /* планшет */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
 	.popup {
@@ -140,7 +134,8 @@ padding: 5px;
 /* смарт */
 @media only screen and (min-width: 320px) and (max-width: 767px) {
 	.popup {
-		width:95%;
+		width:90%;
+        height: 440px;
 	}
 }
 /* изображения внутри окна */
@@ -173,10 +168,11 @@ padding: 5px;
     flex-direction: row;
     
         @include phones{
-        flex-direction: column;
-        
+        flex-direction: column;       
     }
 }
+
+
 
 .deliv__pic{
     width: 300px;
@@ -193,13 +189,26 @@ padding: 5px;
 
 .popup__first{
     flex: 1;
+    margin-bottom: 30px;
+
+    @include tablets{
+        margin-bottom: 0;        
+    }
+
+    @include phones{
+        width: 50%;
+        float: right;
+        margin-top: 15px;
+    }    
 }
 
 .form{
     flex: 1;
+    flex-direction: column;
+    flex-wrap: wrap;
 
     @include phones{
-        margin-top: -85px;
+        flex-direction: row;
     }
 }
 
@@ -220,6 +229,7 @@ padding: 5px;
     cursor: pointer;
     margin: 2px;
 
+    
     &:hover{
         background: #014b60;        
     }
@@ -239,12 +249,19 @@ padding: 5px;
     margin-top: 10px;   
     flex: 1;
 
-    
+    @include tablets{
+        width: 70%;        
+    }
 
     label{        
         margin-bottom: 5px;
         color: #014b60;
         font-weight: 600;
+
+        @include iphone{
+        font-size: 10px;
+        font-weight: 400;
+    }
     }
 
     input{
@@ -258,11 +275,14 @@ padding: 5px;
 .form-inputs{
     display: flex;
     flex-direction: row;
-    margin-top: 70px;
-
+    
     @include tablets{
      flex-direction: column;
-     flex-wrap: wrap;     
+     width: 50%;    
+    }
+
+    @include iphone{
+        font-weight: normal;
     }
 }
 
@@ -276,12 +296,25 @@ padding: 5px;
      flex-wrap: wrap; 
     }
     @include phones{
-        margin-left: 10px;
+        margin-top: -58px;
+        margin-left: 170px;
+        margin-bottom: 20px;
+        width: 50%;
+    }
+
+    @include iphone{
+        font-size: 12px;
+        margin-left: 120px;
+        margin-top: -38px;
     }
 
     label{
         color: #014b60;
         font-weight: 600;
+
+        @include iphone{
+            font-weight: normal;
+        }
     }      
 }
 
@@ -295,26 +328,37 @@ padding: 5px;
         
     }
 
-    @include iphone{
+    @include phones{
      display: none;
     }
 }
 
-.group__form{
-    
+.group__form{    
     padding: 5px;
     border-radius: 4px;
+
+    @include iphone{
+        padding: 2px;
+        font-size: 10px;
+    }
 }
 
-.group__input{
-    
+.group__input{    
     padding: 5px;
     border-radius: 4px;
+    @include iphone{
+        padding: 2px;
+        font-size: 10px;
+    }
 }
 
 .group__select{
     padding: 5px;
     border-radius: 4px;
+    @include iphone{
+        padding: 2px;
+        font-size: 10px;
+    }
 }
 
 .btn-lg{
@@ -324,9 +368,17 @@ padding: 5px;
     color: #a6d0ef;
     cursor: pointer;
     border: none;
+    margin-right: 20px;
 
-    @include phones{
-        margin-top: 5px;
+
+    @include tablets{
+        margin-top: 10px;
+    }
+
+    @include iphone{
+        padding: 4px;
+        font-size: 12px;
+        margin-top: 2px;
     }
 
     &:hover{
@@ -338,11 +390,20 @@ padding: 5px;
 .section__description{
     text-align: left;
     font-weight: bold;
-    color: #014b60;
+    color: #01234c;    
 
     @include phones{
         font-size: 14px;
-        text-align: center;
-        
+        text-align: left;            
+    }
+    @include iphone{
+        font-size: 11px;
+    }
+}
+
+.fotorama{
+    @include iphone{
+        margin-left: -20px;
+        min-height: 200px;
     }
 }
